...
                          width: screenWidth*0.5,
                          child: TextFormField(
                            style: TextStyle(
                              fontSize: screenWidth*0.045,
                            ),   
                            controller: _emailController,
                            decoration: ThemeOptions.inputDecoration('email', 'email', context),
                          ),
                        ),
                        SizedBox(
                          height: screenHeight*0.045,
                          width: screenWidth*0.5,
                          child: TextFormField(
                            key: const Key("username"),
                            style: TextStyle(
                              fontSize: screenWidth*0.045,
                            ),   
                            controller: _usernameController,
                            decoration: ThemeOptions.inputDecoration('username', 'username', context),
                            //decoration: InputDecoration(
...
                          ),
                        ),
                        SizedBox(
                          height: screenHeight*0.045,
                          width: screenWidth*0.5,
                          child: TextFormField(  
                            key: Key("password"),
                            style: TextStyle(
                              fontSize: screenWidth*0.045,
                            ),                   
                            obscureText: true,
                            controller: _passwordController,
                            decoration: ThemeOptions.inputDecoration('password', 'password', context),
...
                          crossAxisAlignment: CrossAxisAlignment.center,
                          children: [
                            SizedBox(
                              height: screenHeight*0.045,
                              width: screenWidth*0.5,
                              child: TextFormField(
                                key: Key("repeatPassword"),
                                style: TextStyle(
                                  fontSize: screenWidth*0.045,
                                ),    
                                obscureText: true,
                                controller: _repeatPasswordController,
                                decoration: ThemeOptions.inputDecoration('repeat password', 'repeat password',context),
...
