...
              child: Text('No internet connection'),
            ),
          );
        }
      }),
      routes:{
        '/register': (context)=>Register(),
        '/login': (context)=>Login(),
        '/add_field': (context)=>MapScreen(),
        '/field_details': (context)=>FieldDetailsScreen(),
        '/field_list': (context)=>FieldListScreen(),
        '/homepage': (context)=>Homepage(),
        '/modify_field': (context)=>ModifyFieldScreen(),
...
